--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 }
 </script>
 </head>
-<body class="bg-gray-50 dark:bg-gray-900">
+<body class="bg-gray-50">
   <app-root></app-root>
 </body>
 </html>
