feat: Implement transaction editing and deletion
Adds functionality to edit and delete existing financial transactions.
Introduces a new floating action button to initiate adding a new transaction.
Updates the transaction service to handle update and delete operations.
Enhances the transaction list component to manage editing states and emit update/delete events.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     "@angular/compiler": "https://next.esm.sh/@angular/compiler@^20.3.10?external=rxjs",
     "@angular/core": "https://next.esm.sh/@angular/core@^20.3.10?external=rxjs",
     "@angular/forms": "https://next.esm.sh/@angular/forms@^20.3.10?external=rxjs",
-    "@angular/router": "https://next.esm.sh/@angular/router@^20.3.10?external=rxjs"
+    "@angular/router": "https://next.esm.sh/@angular/router@^20.3.10?external=rxjs",
+    "@angular/core/rxjs-interop": "https://next.esm.sh/@angular/core@^20.3.10/rxjs-interop?external=rxjs"
   }
 }
 </script>
