--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="height: 100%;">
 <head>
   <meta charset="utf-g">
   <title>Babylon</title>
@@ -26,7 +26,7 @@
 }
 </script>
 </head>
-<body class="bg-gray-50">
+<body class="bg-gray-50" style="height: 100%; margin: 0; padding: 0; overflow: hidden;">
   <app-root></app-root>
 </body>
 </html>
