--- a/index.html
+++ b/index.html
@@ -5,8 +5,47 @@
   <title>Babylon</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- JetBrains Mono Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          fontFamily: {
+            // Override default 'sans' to use JetBrains Mono
+            sans: ['"JetBrains Mono"', 'ui-monospace', 'SFMono-Regular', 'Menlo', 'Monaco', 'Consolas', 'monospace'],
+            // Keep a dedicated 'mono' stack
+            mono: ['"JetBrains Mono"', 'ui-monospace', 'SFMono-Regular', 'Menlo', 'Monaco', 'Consolas', 'monospace'],
+          },
+        },
+      },
+    };
+  </script>
   <style>
+    /* Global Terminal Chic Styles */
+    html {
+      font-size: 14px; /* Reduced from default 16px */
+    }
+    
+    html, body {
+      font-family: 'JetBrains Mono', ui-monospace, 'SFMono-Regular', Menlo, Monaco, Consolas, monospace;
+      color: #111827;
+      background-color: white;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+      letter-spacing: -0.015em;
+      font-size: 0.875rem; /* 14px base */
+    }
+
+    /* Make inputs, textareas, and selects feel like code editors */
+    input, textarea, select {
+      font-weight: 500;
+      font-size: 0.875rem; /* 14px */
+    }
+
     /* Hide browser spinners on number inputs */
     /* Chrome, Safari, Edge, Opera */
     input::-webkit-outer-spin-button,
